# Project-Akiha

./: .gitignore  README.md  pyproject.toml
Architecture/: ARCHITECTURE.md  CLAUDE.md  SECURITY.md
Brief/: project-akiha-architecture.md
assets/animations/: manifest.example.toml  manifest.toml
docs/: PHASE1_DESKTOP_PET.md  PHASE2_CHAT_FOUNDATION.md  PHASE3_MEMORY_LAYER.md
project_akiha/: __init__.py
project_akiha/app/: __init__.py  activity_controller.py  chat_controller.py  main.py  mood_animation_controller.py  mood_controller.py  pet_controller.py  proactive_controller.py  proactive_delivery_controller.py  scheduled_check_in_controller.py
project_akiha/config/: __init__.py  default.toml  settings.py
project_akiha/core/: __init__.py
project_akiha/core/behavior/: __init__.py  activity.py  delivery.py  history.py  mood.py  mood_animation.py  notification_policy.py  proactive.py  schedule.py
project_akiha/database/: __init__.py  migrator.py  sqlite_behavior_repository.py  sqlite_conversation_repository.py  sqlite_memory_repository.py
project_akiha/providers/: __init__.py
project_akiha/services/: app_paths.py  behavior_history.py  config_store.py  conversation_summary.py  event_logger.py  logging.py  memory_extraction.py  path_resolver.py  transcript_export.py  window_placement.py  window_state.py
project_akiha/ui/: __init__.py  chat_window.py  chat_worker.py  memory_window.py  pet_renderer.py  pet_window.py  proactive_delivery.py  settings_window.py  tray.py
scripts/: build_phase1_nuitka.ps1
tests/: __init__.py
tests/unit/app/: __init__.py  (+8 more)
(+77 files in other folders)
